Change devcontainer to include FW CLI
Change devcontainer to include FW CLI:
1. Change to use Dockerfile.
2. Add commands to download and install FW CLI.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Python 3",
-	"image": "mcr.microsoft.com/devcontainers/python:3.9",
+	"build": {"dockerfile": "Dockerfile"},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
