Create src type directories for project_management

--- a/pants.toml
+++ b/pants.toml
@@ -21,7 +21,7 @@ repo_id = "A8B966D2-72FA-451B-965B-CACF8CF2FDC5"
 [source]
 root_patterns = [
     "common/src", "common/test",
-    "project_management/src", "project_management/test",
+    "project_management/src/python", "project_management/test/python",
     "user_management/src", "user_management/test"
 ]
 
