Change manifest command to use gear cli argument

--- a/project_management/src/docker/manifest.json
+++ b/project_management/src/docker/manifest.json
@@ -40,5 +40,5 @@
             "default": false
         }
     },
-    "command": "/bin/create_project"
+    "command": "/bin/create_project --gear"
 }
