--- a/pants.toml
+++ b/pants.toml
@@ -21,9 +21,12 @@ repo_id = "A8B966D2-72FA-451B-965B-CACF8CF2FDC5"
 [source]
 root_patterns = [
     "common/src", "common/test",
-    "project_management/src", "project_management/test",
+    "project_management/src/python", "project_management/test/python",
     "user_management/src", "user_management/test"
 ]
+
+[docker]
+default_repository = "naccdata/{name}"
 
 [python]
 interpreter_constraints = ["==3.9.*"]
