Reorganize app code

--- a/project_management/src/python/BUILD
+++ b/project_management/src/python/BUILD
@@ -1,6 +1,9 @@
-python_sources(name="lib")
+python_sources(
+    name="project_app",
+    dependencies=['project_management/src/python/main.py:project_app']
+)
 
 pex_binary(
     name="bin", 
-    entry_point="create_project.py"
+    entry_point="run.py"
 )
