--- a/user_management/src/docker/manifest.json
+++ b/user_management/src/docker/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "project-management",
-    "label": "Project management",
-    "description": "Creates and updates projects from project YAML file",
+    "name": "user-management",
+    "label": "User Management",
+    "description": "Creates and updates user and user roles",
     "version": "0.0.1",
     "author": "bjkeller@uw.edu",
     "maintainer": "nacchelp@uw.edu",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/project-management"
+            "image": "naccdata/user-management"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -23,8 +23,8 @@
         }
     },
     "inputs": {
-        "project_file": {
-            "description": "The project YAML file",
+        "user_file": {
+            "description": "The user YAML file",
             "base": "file",
             "type": {
                 "enum": [
@@ -38,7 +38,7 @@
             "description": "Whether to do a dry run",
             "type": "boolean",
             "default": false
-        }
+        }        
     },
-    "command": "/bin/run --gear"
+    "command": "bin/run --gear"
 }
