--- a/project_management/src/python/BUILD
+++ b/project_management/src/python/BUILD
@@ -1,9 +1,5 @@
 python_sources(
     name="project_app",
-    dependencies=['project_management/src/python/main.py:project_app']
-)
+    dependencies=['project_management/src/python/main.py:project_app'])
 
-pex_binary(
-    name="bin", 
-    entry_point="run.py"
-)
+pex_binary(name="bin", entry_point="run.py")
