Simplify source roots

--- a/pants.toml
+++ b/pants.toml
@@ -21,10 +21,7 @@ repo_id = "A8B966D2-72FA-451B-965B-CACF8CF2FDC5"
 
 [source]
 root_patterns = [
-    "common/src/python", "common/test/python",
-    "project_management/src/python", "project_management/test/python",
-    "project_management/src/docker",
-    "user_management/src/python", "user_management/src/docker", "user_management/test"
+    "src/*", "test/*"
 ]
 
 [docker]
