Apply formatter to build files

--- a/user_management/src/python/BUILD
+++ b/user_management/src/python/BUILD
@@ -1,4 +1,2 @@
-python_sources(
-    name="user_app",
-    dependencies=['!project_management/src/python:project_app']
-)
+python_sources(name="user_app",
+               dependencies=['!project_management/src/python:project_app'])
