--- a/project_management/src/docker/BUILD
+++ b/project_management/src/docker/BUILD
@@ -1,6 +1,6 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="project_management",
+docker_image(name="project-management",
              source="Dockerfile",
              dependencies=[":manifest", "project_management/src/python:bin"],
              image_tags=["0.0.1", "latest"])
