--- a/push_template/src/docker/manifest.json
+++ b/push_template/src/docker/manifest.json
@@ -34,6 +34,11 @@
             "description": "Name of the admin group",
             "type": "string",
             "default": "nacc"
+        },
+        "new_only": {
+            "description": "Only create projects for centers tagged as new",
+            "type": "boolean",
+            "default": false
         }
     },
     "command": "/bin/run --gear"
