--- a/user_management/src/docker/BUILD
+++ b/user_management/src/docker/BUILD
@@ -1,1 +1,12 @@
-docker_image()
+file(name="manifest", source="manifest.json")
+
+docker_image(name="user-management",
+             source="Dockerfile",
+             dependencies=[":manifest", "user_management/src/python:bin"],
+             image_tags=["0.0.1", "latest"])
+
+experimental_run_shell_command(
+    name="gear",
+    command="/home/vscode/bin/fw-beta gear",
+    description="run fw gear command for user_management",
+    workdir="user_management/src/docker")
