--- a/pants.toml
+++ b/pants.toml
@@ -13,6 +13,7 @@ backend_packages = [
     "pants.backend.python.typecheck.mypy",
     "pants.backend.docker",
     "pants.backend.docker.lint.hadolint",
+    "pants.backend.shell"
 ]
 
 [anonymous-telemetry]
