--- a/directory_pull/src/docker/Dockerfile
+++ b/directory_pull/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY directory_pull/src/docker/manifest.json ${BASE_DIR}
-COPY directory_pull.src.python/bin.pex /bin/run
+COPY directory_pull.src.python.directory_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
