--- a/project_management/src/docker/Dockerfile
+++ b/project_management/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY project_management/src/docker/manifest.json ${BASE_DIR}
-COPY project_management.src.python/bin.pex /bin/run
+COPY project_management.src.python.project_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
