--- a/user_management/src/docker/Dockerfile
+++ b/user_management/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY user_management/src/docker/manifest.json ${BASE_DIR}
-COPY user_management.src.python/bin.pex /bin/run
+COPY user_management.src.python.user_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
