--- a/templates/docker/dockerfile-template.txt
+++ b/templates/docker/dockerfile-template.txt
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY ${DIRNAME}/src/docker/manifest.json ${BASE_DIR}
-COPY ${DIRNAME}.src.python/bin.pex /bin/run
+COPY ${DIRNAME}.src.python.${APPNAME}/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
