--- a/push_template/src/docker/BUILD
+++ b/push_template/src/docker/BUILD
@@ -10,3 +10,9 @@ experimental_run_shell_command(
     command="fw-beta gear",
     description="run fw gear command for push_template",
     workdir="push_template/src/docker")
+
+experimental_run_shell_command(
+    name="validate",
+    command="fw-beta gear --validate manifest.json",
+    description="validate gear manifest for push_template",
+    workdir="push_template/src/docker")
