--- a/push_template/src/docker/manifest.json
+++ b/push_template/src/docker/manifest.json
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/push-template"
+            "image": "naccdata/push-template:0.0.1"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
