--- a/user_management/src/docker/manifest.json
+++ b/user_management/src/docker/manifest.json
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/user-management"
+            "image": "naccdata/user-management:0.0.1"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
