Use environment variable for repeated path

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,8 @@
 FROM mcr.microsoft.com/devcontainers/python:3.10
 
-RUN mkdir -p /home/vscode/bin \
- && export FW_CLI_INSTALL_DIR=/home/vscode/bin \
+ENV USERHOME=/home/vscode/bin
+RUN mkdir -p ${USERHOME} \
+ && export FW_CLI_INSTALL_DIR=${USERHOME} \
  && curl https://storage.googleapis.com/flywheel-dist/fw-cli/stable/install.sh | bash \
  && echo "alias fw='fw-beta'" > /etc/bash.bashrc \
- && chown -R vscode /home/vscode/bin
+ && chown -R vscode ${USERHOME}
