--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
 	"name": "Python 3",
-	"build": {"dockerfile": "Dockerfile"},
+	"image": "mcr.microsoft.com/devcontainers/python:3.10",
+	// "build": {"dockerfile": "Dockerfile"},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -13,6 +14,9 @@
 	// "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	},
+	"remoteEnv": {
+		"PATH": "${containerEnv:PATH}:/home/vscode/bin"
 	},
 
 	// Configure tool-specific properties.
