--- a/push_template/src/docker/manifest.json
+++ b/push_template/src/docker/manifest.json
@@ -3,11 +3,11 @@
     "label": "Push Project Template",
     "description": "Pushes template projects to center projects",
     "version": "0.0.1",
-    "author": "bjkeller@uw.edu",
-    "maintainer": "nacchelp@uw.edu",
+    "author": "NACC",
+    "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
     "license": "MPL-2.0",
-    "url": "",
+    "url": "https://naccdata.github.io/flywheel-gear-extensions/push_template/",
     "source": "https://github.com/naccdata/flywheel-gear-extensions",
     "environment": {
         "FLYWHEEL": "/flywheel/v0"
