Change gear command to gear upload

--- a/push_template/src/docker/BUILD
+++ b/push_template/src/docker/BUILD
@@ -6,13 +6,13 @@ docker_image(name="push-template",
              image_tags=["0.0.1", "latest"])
 
 experimental_run_shell_command(
-    name="gear",
-    command="fw-beta gear",
-    description="run fw gear command for push_template",
-    workdir="push_template/src/docker")
-
-experimental_run_shell_command(
     name="validate",
     command="fw-beta gear --validate manifest.json",
     description="validate gear manifest for push_template",
+    workdir="push_template/src/docker")
+
+experimental_run_shell_command(
+    name="upload",
+    command="fw-beta gear upload ./",
+    description="run fw gear command for push_template",
     workdir="push_template/src/docker")
