--- a/project_management/src/docker/BUILD
+++ b/project_management/src/docker/BUILD
@@ -6,8 +6,8 @@ docker_image(name="project-management",
              image_tags=["0.0.1", "latest"])
 
 experimental_run_shell_command(
-    name="gear",
-    command="fw-beta gear",
+    name="upload",
+    command="fw-beta gear upload ./",
     description="run fw gear command for project_management",
     workdir="project_management/src/docker")
 
