Add API key requirement to manifests

--- a/project_management/src/docker/manifest.json
+++ b/project_management/src/docker/manifest.json
@@ -23,6 +23,9 @@
         }
     },
     "inputs": {
+        "api-key": {
+            "base": "api-key"
+        },
         "project_file": {
             "description": "The project YAML file",
             "base": "file",
