--- a/user_management/src/docker/manifest.json
+++ b/user_management/src/docker/manifest.json
@@ -23,6 +23,9 @@
         }
     },
     "inputs": {
+        "api-key": {
+            "base": "api-key"
+        },
         "user_file": {
             "description": "The user YAML file",
             "base": "file",
