--- a/user_management/src/docker/BUILD
+++ b/user_management/src/docker/BUILD
@@ -16,3 +16,9 @@ experimental_run_shell_command(
     command="fw-beta gear --validate manifest.json",
     description="validate gear manifest for user_management",
     workdir="user_management/src/docker")
+
+experimental_run_shell_command(
+    name="local",
+    command="fw-beta gear run",
+    description="run user_management gear locally",
+    workdir="user_management/src/docker")
