--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
 	"name": "Python 3",
 	"image": "mcr.microsoft.com/devcontainers/python:3.10",
-	// "build": {"dockerfile": "Dockerfile"},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -11,9 +10,11 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "bash ./.devcontainer/post_create_command.sh ${containerWorkspaceFolder}",
-	// "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
+	// "postStartCommand": "",
 	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest"
+		}
 	},
 	"remoteEnv": {
 		"PATH": "${containerEnv:PATH}:/home/vscode/bin"
@@ -23,10 +24,11 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.python"
+				"ms-python.python",
+				"ms-azuretools.vscode-docker"
 			]
 		}
-	},
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
