--- a/project_management/src/docker/BUILD
+++ b/project_management/src/docker/BUILD
@@ -2,5 +2,7 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="project-management",
              source="Dockerfile",
-             dependencies=[":manifest", "project_management/src/python/project_app:bin"],
+             dependencies=[
+                 ":manifest", "project_management/src/python/project_app:bin"
+             ],
              image_tags=["0.0.1", "latest"])
