--- a/push_template/src/docker/BUILD
+++ b/push_template/src/docker/BUILD
@@ -1,6 +1,7 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="push-template",
-             source="Dockerfile",
-             dependencies=[":manifest", "push_template/src/python/template_app:bin"],
-             image_tags=["0.0.5", "latest"])
+docker_image(
+    name="push-template",
+    source="Dockerfile",
+    dependencies=[":manifest", "push_template/src/python/template_app:bin"],
+    image_tags=["0.0.5", "latest"])
