--- a/user_management/src/docker/BUILD
+++ b/user_management/src/docker/BUILD
@@ -1,6 +1,7 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="user-management",
-             source="Dockerfile",
-             dependencies=[":manifest", "user_management/src/python/user_app:bin"],
-             image_tags=["0.0.1", "latest"])
+docker_image(
+    name="user-management",
+    source="Dockerfile",
+    dependencies=[":manifest", "user_management/src/python/user_app:bin"],
+    image_tags=["0.0.1", "latest"])
