--- a/attribute_curator/src/docker/BUILD
+++ b/attribute_curator/src/docker/BUILD
@@ -2,5 +2,7 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="attribute-curator",
              source="Dockerfile",
-             dependencies=[":manifest", "attribute_curator/src/python/attribute_app:bin"],
+             dependencies=[
+                 ":manifest", "attribute_curator/src/python/attribute_app:bin"
+             ],
              image_tags=["0.0.1", "latest"])
