Give stubs to mypy explicitly

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,4 @@
 [mypy]
 warn_unused_configs = True
+mypy_path = $MYPY_CONFIG_FILE_DIR/mypy-stubs/src/python
 
-[mypy-flywheel_gear_toolkit]
-ignore_missing_imports = True
