--- a/pull_scan_metadata/src/docker/Dockerfile
+++ b/pull_scan_metadata/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY pull_scan_metadata/src/docker/manifest.json ${BASE_DIR}
-COPY pull_scan_metadata.src.python.scan_metadata/bin.pex /bin/run
+COPY pull_scan_metadata.src.python.scan_metadata_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
