--- a/pull_scan_metadata/src/docker/manifest.json
+++ b/pull_scan_metadata/src/docker/manifest.json
@@ -7,7 +7,7 @@
     "maintainer": "nacchelp@uw.edu",
     "cite": "",
     "license": "MPL-2.0",
-    "url": "",
+    "url": "https://naccdata.github.io/flywheel-gear-extensions",
     "source": "https://github.com/naccdata/flywheel-gear-extensions",
     "environment": {
         "FLYWHEEL": "/flywheel/v0"
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/pull-scan-metadata"
+            "image": "naccdata/pull-scan-metadata:0.0.1"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -26,5 +26,5 @@
     },
     "config": {
     },
-    "command": "/bin/run --gear"
+    "command": "/bin/run"
 }
