--- a/pull_scan_metadata/src/docker/BUILD
+++ b/pull_scan_metadata/src/docker/BUILD
@@ -2,5 +2,7 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="pull-scan-metadata",
              source="Dockerfile",
-             dependencies=[":manifest", "pull_scan_metadata/src/python/project_app:bin"],
+             dependencies=[
+                 ":manifest", "pull_scan_metadata/src/python/project_app:bin"
+             ],
              image_tags=["0.0.1", "latest"])
