Tweak pants build

--- a/push_template/src/docker/BUILD
+++ b/push_template/src/docker/BUILD
@@ -5,3 +5,5 @@ docker_image(
     source="Dockerfile",
     dependencies=[":manifest", "push_template/src/python/template_app:bin"],
     image_tags=["0.0.6", "latest"])
+
+shell_sources()
