--- a/mypy-stubs/src/python/flywheel/models/BUILD
+++ b/mypy-stubs/src/python/flywheel/models/BUILD
@@ -1,1 +1,6 @@
 python_sources(name="lib", skip_flake8=True, skip_pylint=True, skip_isort=True)
+
+resource(
+    name="py_typed",
+    source="py.typed",
+)
