--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+boto3>=1.28.53
+boto3-stubs[boto3]
 flywheel-gear-toolkit>=0.2
 flywheel-sdk>=16.14.8
+pandas>=2.1.1
+pandas-stubs>=2.0.3
 pyyaml==6.0
 pytest>=7.2.0
 requests>=2.18.4
