Remove references to SCAN

--- a/pull_metadata/src/docker/BUILD
+++ b/pull_metadata/src/docker/BUILD
@@ -1,8 +1,8 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="pull-scan-metadata",
+docker_image(name="pull-metadata",
              source="Dockerfile",
              dependencies=[
-                 ":manifest", "pull_scan_metadata/src/python/project_app:bin"
+                 ":manifest", "pull_metadata/src/python/project_app:bin"
              ],
              image_tags=["0.0.1", "latest"])
