--- a/pull_metadata/src/docker/manifest.json
+++ b/pull_metadata/src/docker/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "pull-scan-metadata",
-    "label": "Pull SCAN Metadata",
+    "name": "pull-metadata",
+    "label": "Pull Metadata",
     "description": "Pulls CSV metadata from S3, partitions by center and distributes to centers",
     "version": "0.0.1",
     "author": "zstark@uw.edu",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
     "license": "MPL-2.0",
-    "url": "https://naccdata.github.io/flywheel-gear-extensions/pull_scan_metadata",
+    "url": "https://naccdata.github.io/flywheel-gear-extensions/pull_metadata",
     "source": "https://github.com/naccdata/flywheel-gear-extensions",
     "environment": {
         "FLYWHEEL": "/flywheel/v0"
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/pull-scan-metadata:0.0.1"
+            "image": "naccdata/pull-metadata:0.0.1"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
