--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ pandas-stubs>=2.0.3
 pyyaml==6.0
 pytest>=7.2.0
 requests>=2.18.4
+setuptools>=68.2.2
 ssm-parameter-store>=19.11.0
 types-PyYAML>=6.0.12
