--- a/pull_metadata/src/docker/Dockerfile
+++ b/pull_metadata/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY pull_scan_metadata/src/docker/manifest.json ${BASE_DIR}
-COPY pull_scan_metadata.src.python/bin.pex /bin/run
+COPY pull_metadata/src/docker/manifest.json ${BASE_DIR}
+COPY pull_metadata.src.python.metadata_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
