--- a/user_management/src/docker/manifest.json
+++ b/user_management/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "user-management",
     "label": "User Management",
     "description": "Creates and updates user and user roles",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/user-management:0.0.1"
+            "image": "naccdata/user-management:0.0.2"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -23,15 +23,6 @@
         }
     },
     "inputs": {
-        "user_file": {
-            "description": "The user YAML file",
-            "base": "file",
-            "type": {
-                "enum": [
-                    "source code"
-                ]
-            }
-        }
     },
     "config": {
         "dry_run": {
@@ -48,7 +39,12 @@
             "description": "Name of the source project",
             "type": "string",
             "default": "project-admin"
-        }     
+        },
+        "user_file"  : {
+            "description": "The user YAML filename",
+            "type": "string",
+            "default": "nacc-directory-users.yaml"
+        }
     },
     "command": "bin/run"
 }
