--- a/csv_to_json_transformer/src/docker/manifest.json
+++ b/csv_to_json_transformer/src/docker/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "csv-to-json-transformer",
-    "label": "ADD GEAR LABEL",
-    "description": "DESCRIBE GEAR",
+    "label": "CSV to JSON Transformer",
+    "description": "Converts rows of CSV file to JSON files",
     "version": "0.0.1",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
@@ -46,11 +46,6 @@
             "description": "Name of the admin group",
             "type": "string",
             "default": "nacc"
-        },
-        "new_only": {
-            "description": "Only create projects for centers tagged as new",
-            "type": "boolean",
-            "default": false
         }
     },
     "command": "/bin/run"
