--- a/csv_to_json_transformer/src/docker/Dockerfile
+++ b/csv_to_json_transformer/src/docker/Dockerfile
@@ -6,6 +6,6 @@ RUN mkdir -p ${BASE_DIR}/input
 WORKDIR ${BASE_DIR}
 
 COPY csv_to_json_transformer/src/docker/manifest.json ${BASE_DIR}
-COPY csv_to_json_transformer.src.python.${APPNAME}/bin.pex /bin/run
+COPY csv_to_json_transformer.src.python.csv_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
