--- a/identifer_lookup/src/docker/manifest.json
+++ b/identifer_lookup/src/docker/manifest.json
@@ -26,8 +26,8 @@
         "api-key": {
             "base": "api-key"
         },
-        "identifer_file": {
-            "description": "The project YAML file",
+        "input_file": {
+            "description": "The input file with identifiers",
             "base": "file",
             "type": {
                 "enum": [
@@ -41,11 +41,6 @@
             "description": "Whether to do a dry run",
             "type": "boolean",
             "default": false
-        },
-        "admin_group": {
-            "description": "Name of the admin group",
-            "type": "string",
-            "default": "nacc"
         }
     },
     "command": "/bin/run"
