format build file

--- a/form_qc_checker/src/docker/BUILD
+++ b/form_qc_checker/src/docker/BUILD
@@ -1,6 +1,7 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="form-qc-checker",
-             source="Dockerfile",
-             dependencies=[":manifest", "form_qc_checker/src/python/form_qc_app:bin"],
-             image_tags=["0.0.1", "latest"])
+docker_image(
+    name="form-qc-checker",
+    source="Dockerfile",
+    dependencies=[":manifest", "form_qc_checker/src/python/form_qc_app:bin"],
+    image_tags=["0.0.1", "latest"])
