--- a/gear/project_management/src/docker/Dockerfile
+++ b/gear/project_management/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY project_management/src/docker/manifest.json ${BASE_DIR}
-COPY project_management.src.python.project_app/bin.pex /bin/run
+COPY gear/project_management/src/docker/manifest.json ${BASE_DIR}
+COPY gear.project_management.src.python.project_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
