Fix push template paths

--- a/gear/push_template/src/docker/Dockerfile
+++ b/gear/push_template/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY push_template/src/docker/manifest.json ${BASE_DIR}
-COPY push_template.src.python.template_app/bin.pex /bin/run
+COPY gear/push_template/src/docker/manifest.json ${BASE_DIR}
+COPY gear.push_template.src.python.template_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
