--- a/gear/user_management/src/docker/Dockerfile
+++ b/gear/user_management/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY user_management/src/docker/manifest.json ${BASE_DIR}
-COPY user_management.src.python.user_app/bin.pex /bin/run
+COPY gear/user_management/src/docker/manifest.json ${BASE_DIR}
+COPY gear.user_management.src.python.user_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
