--- a/templates/docker/dockerfile-template.txt
+++ b/templates/docker/dockerfile-template.txt
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY ${DIRNAME}/src/docker/manifest.json ${BASE_DIR}
-COPY ${DIRNAME}.src.python.${APPNAME}/bin.pex /bin/run
+COPY gear/${DIRNAME}/src/docker/manifest.json ${BASE_DIR}
+COPY gear.${DIRNAME}.src.python.${APPNAME}/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
