Add parameters to manifest template

--- a/templates/gear/{{cookiecutter.module_name}}/src/docker/manifest.json
+++ b/templates/gear/{{cookiecutter.module_name}}/src/docker/manifest.json
@@ -3,8 +3,8 @@
     "label": "{{cookiecutter.gear_name}}",
     "description": "{{cookiecutter.gear_description}}",
     "version": "{{cookiecutter.image_tag}}",
-    "author": "NACC",
-    "maintainer": "NACC <nacchelp@uw.edu>",
+    "author": "{{cookiecutter.author}}",
+    "maintainer": "{{cookiecutter.maintainer}}",
     "cite": "",
     "license": "MPL-2.0",
     "url": "https://naccdata.github.io/flywheel-gear-extensions",
