Format build files

--- a/gear/pull_directory/src/docker/BUILD
+++ b/gear/pull_directory/src/docker/BUILD
@@ -4,4 +4,5 @@ docker_image(
     name="pull-directory",
     source="Dockerfile",
     dependencies=[":manifest", "gear/pull_directory/src/python/directory_app:bin"],
-    image_tags=["0.0.9", "latest"])
+    image_tags=["0.0.9", "latest"],
+)
