--- a/gear/push_template/src/docker/BUILD
+++ b/gear/push_template/src/docker/BUILD
@@ -4,6 +4,5 @@ docker_image(
     name="push-template",
     source="Dockerfile",
     dependencies=[":manifest", "gear/push_template/src/python/template_app:bin"],
-    image_tags=["0.0.9", "latest"])
-
-shell_sources()
+    image_tags=["0.0.9", "latest"],
+)
