--- a/gear/pull_metadata/src/docker/BUILD
+++ b/gear/pull_metadata/src/docker/BUILD
@@ -4,4 +4,5 @@ docker_image(
     name="pull-metadata",
     source="Dockerfile",
     dependencies=[":manifest", "gear/pull_metadata/src/python/metadata_app:bin"],
-    image_tags=["0.0.9", "latest"])
+    image_tags=["0.0.9", "latest"],
+)
