--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
         "**/node_modules/*/**": true,
         "**/.hg/store/**": true,
         "**/dist/**": true
-    }
+    },
+    "editor.detectIndentation": false
 }
