--- a/gear/csv_to_json_transformer/src/docker/BUILD
+++ b/gear/csv_to_json_transformer/src/docker/BUILD
@@ -2,5 +2,8 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="csv-to-json-transformer",
              source="Dockerfile",
-             dependencies=[":manifest", "gear/csv_to_json_transformer/src/python/csv_app:bin"],
+             dependencies=[
+                 ":manifest",
+                 "gear/csv_to_json_transformer/src/python/csv_app:bin"
+             ],
              image_tags=["0.0.1", "latest"])
