--- a/gear/form_qc_checker/src/docker/manifest.json
+++ b/gear/form_qc_checker/src/docker/manifest.json
@@ -18,7 +18,7 @@
             "image": "naccdata/form-qc-checker:0.0.1"
         },
         "flywheel": {
-            "suite": "NACC Admin Gears",
+            "suite": "Curation",
             "show-job": true
         }
     },
@@ -41,6 +41,21 @@
         },
         "parameter_path": {
             "description": "Parameter path for QC rules on S3",
+            "type": "string"
+        },
+        "primary_key": {
+            "description": "Primary key field (variable) for the form data project.",
+            "type": "string",
+            "default": "naccid"
+        },
+        "strict_mode": {
+            "description": "Validation mode. If false, input data variables that are not in the rule definitions are skipped from validation.",
+            "type": "boolean",
+            "default": true
+        },
+        "tag": {
+            "default": "form-qc-checker",
+            "description": "The tag to be added on input file upon job completion.",
             "type": "string"
         }
     },
