Format build files

--- a/gear/pull_directory/src/python/directory_app/BUILD
+++ b/gear/pull_directory/src/python/directory_app/BUILD
@@ -1,5 +1,3 @@
-python_sources(
-    name="directory_app",
-)
+python_sources(name="directory_app", )
 
 pex_binary(name="bin", entry_point="run.py")
