--- a/gear/pull_metadata/src/docker/BUILD
+++ b/gear/pull_metadata/src/docker/BUILD
@@ -1,8 +1,10 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="pull-metadata",
-             source="Dockerfile",
-             dependencies=[
-                 ":manifest", "gear/pull_metadata/src/python/metadata_app:bin"
-             ],
-             image_tags=["0.0.9", "latest"])
+docker_image(
+    name="pull-metadata",
+    source="Dockerfile",
+    dependencies=[
+        ":manifest", "gear/pull_metadata/src/python/metadata_app:bin"
+    ],
+    image_tags=["0.0.9", "latest"],
+)
