--- a/gear/pull_directory/src/docker/BUILD
+++ b/gear/pull_directory/src/docker/BUILD
@@ -1,9 +1,10 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="pull-directory",
-             source="Dockerfile",
-             dependencies=[
-                 ":manifest",
-                 "gear/pull_directory/src/python/directory_app:bin"
-             ],
-             image_tags=["0.0.10", "latest"])
+docker_image(
+    name="pull-directory",
+    source="Dockerfile",
+    dependencies=[
+        ":manifest", "gear/pull_directory/src/python/directory_app:bin"
+    ],
+    image_tags=["0.0.10", "latest"],
+)
