--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ flywheel-gear-toolkit>=0.2
 flywheel-sdk>=17.7.0
 fw-client>=0.7.0
 fw-utils>=3
+types-jinja2>=2.11.9
 moto[s3,ssm]==4.2.14
 pandas>=2.1.1
 pandas-stubs>=2.0.3
