--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,7 @@
             "extensions": [
                 "ms-python.python",
                 "ms-azuretools.vscode-docker",
+                "streetsidesoftware.code-spell-checker",                
                 "yzhang.markdown-all-in-one"
             ]
         }
