Pull changes from add-sandboxes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,9 @@
         "**/.hg/store/**": true,
         "**/dist/**": true
     },
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "cSpell.words": [
+        "devcontainer",
+        "NACC"
+    ]
 }
