Add auth file to manifest

--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -44,6 +44,11 @@
             "description": "The user YAML filename",
             "type": "string",
             "default": "nacc-directory-users.yaml"
+        },
+        "auth_file"  : {
+            "description": "The role YAML filename",
+            "type": "string",
+            "default": "user-roles.yaml"
         }
     },
     "command": "/bin/run"
