--- a/gear/pull_metadata/src/docker/manifest.json
+++ b/gear/pull_metadata/src/docker/manifest.json
@@ -34,6 +34,12 @@
             "description": "Parameter path for S3 credentials",
             "type": "string"
         },
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter gearbot path prefix",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
+
+        },
         "destination_label": {
             "description": "Label of destination project",
             "type": "string"
