--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -35,6 +35,12 @@
             "type": "string",
             "default": "nacc"
         },
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter gearbot path prefix",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
+
+        },
         "source": {
             "description": "Name of the source project",
             "type": "string",
