--- a/gear/identifer_lookup/src/docker/manifest.json
+++ b/gear/identifer_lookup/src/docker/manifest.json
@@ -23,6 +23,9 @@
         }
     },
     "inputs": {
+        "api-key": {
+            "base": "api-key"
+        },
         "input_file": {
             "description": "The CSV input file. Each row must have ADCID and PTID",
             "base": "file",
