--- a/gear/pull_metadata/src/docker/manifest.json
+++ b/gear/pull_metadata/src/docker/manifest.json
@@ -23,6 +23,9 @@
         }
     },
     "inputs": {
+        "api-key": {
+            "base": "api-key"
+        }
     },
     "config": {
         "dry_run": {
